# json-typedef-infer

./: Cargo.toml  README.md  test.json
.github/workflows/: publish.yml
src/: cli.yaml  hint_set.rs  hints.rs  inferred_number.rs  inferred_schema.rs  lib.rs  main.rs
