[package]
name = "jtd-infer"
description = "Generate JSON Typedef schemas from example data"
version = "0.1.1"
license = "MIT"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
jtd = "0.1.4"
serde_json = "1"
failure = "0.1"
chrono = "0.4"
