[package]
name = "jtd-infer"
description = "Generate JSON Typedef schemas from example data"
version = "0.2.1"
license = "MIT"
authors = ["Ulysse Carion <ulysse@segment.com>"]
edition = "2018"

[dependencies]
clap = { version = "4", features = ["derive"] }
jtd = "0.3.1"
serde_json = "1"
anyhow = "1.0"
chrono = "0.4"
